--- a/WQD7001-project.Rmd
+++ b/WQD7001-project.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Parents’ Educational Background and Children’s Success"
-author: "Maimul"
+title: "Exploratory Analysis on Relationship between Parent Education and Children "
+author: "Group 5"
 date: '2022-05-04'
 output: html_document
 ---
