--- a/Presentation/slidy_presentation.Rmd
+++ b/Presentation/slidy_presentation.Rmd
@@ -58,4 +58,19 @@ Up Maths! app link: https://iqeiaz-0i0.shinyapps.io/ShinyApp7001/
 R codes and supporting document on Github: https://github.com/maimul/WQD7001/tree/main/ShinyApp7001
 
 
+# Discuss the current issues and challenges facing Data Science today.
+1. Data Security:
+It becomes one of the main issues in data science that concerns any organizations worldwide. Data security is important as it includes all security measures and tools used in analytics and data processes. Attack on data systems, ransomware, as well as theft are some examples of the data security breaches. Information theft is known to be the most common data security concern, especially for organizations that keep sensitive data. In order to reduce the risk of information theft, companies need to stick to these three data security fundamentals which are confidentiality, integrity, and accessibility to minimize the threat of data traveling over the internet. Implementing secure systems like privacy policies, data encryption, and pseudonymization help businesses to ensure that data will remain protected.
+
+2.  Lack of Clarity on Business Problem:
+Prior to implementing data science solutions for a business problem, one must first investigate the issue. Choosing the mechanical technique of finding datasets and undertaking data analysis prior to gaining a clear understanding of the business problem to address is ineffective. This is particularly unhelpful when using Data Science for effective decision-making. Moreover, even if you have a clear aim in mind, your efforts will be in vain if your expectations for data science implementation are not linked with the final goals. 
+
+3.  Data-driven culture in organization:
+The biggest obstacle in becoming a data-driven company lies in an organization's culture, not technologies. Though top-level understand the importance of data analysis, they often do not extend the desired support to their employees. Constant pressure and lack of support from the top and lower-level employees are among the most significant data analytics challenges. This is because data-driven is an evolution that starts at the top level and keeps percolating to the lower levels so that data get acceptance at every level. Becoming a data-driven organization requires data culture and technology investments to shift how employees make business decisions. Empowered with data culture and the right technology, employees can ask questions, challenge ideas, and use data (not just intuition) to make decisions. Besides that, employees unite over a shared mission to improve their organization and themselves with the power of data.
+
+4. Data source:
+Though it may seem that the volume of data is getting overwhelming, a good dataset does not always mean a right dataset for a data science project. Especially when the internet world is facing the uncertainty of network security, the data scientist needs to be extremely cautious on the data source he or she gets the dataset from. Most often, the dataset is there not because the data scientist has found it but the internet wants you to see it. In addition, the majority of businesses see their data as an intangible asset with high confidentiality. Thus, getting the right dataset that could extract the most valuable secret recipe (trends or patterns) may still be a problem to data scientists.
+
+5. Lack of experienced Data Scientists:
+There seems to be a lot of data science job listings but not enough experienced data scientists. Most of the data scientists are fresh graduates and there is not enough training given for them to upgrade their skills to become a skilled data scientist. A company should be having an experienced data scientist to trickle down their experience to the fresh graduates but there is no experienced data scientist to train them in the first place. Not all departments in a company understand the technical information in a given data. Therefore a professional data scientist is required who is able to explain the technical data in a more comprehensive way, through visualization and storytelling. It is rare to find a data scientist who is skilled at all aspects starting from data preprocessing, to modeling, to visualization, to storytelling.
 
