--- a/Presentation/slidy_presentation.Rmd
+++ b/Presentation/slidy_presentation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploratory Analysis on Relationship between Parent Education and Children Success"
+title: "Exploratory Analysis on Relationship between Parent Education and Children Success\n\n UpMath!"
 
 author: "Maimul Hoque (S2142027) - Group Leader \n\n Aainaa Nadia Binti Mohammed Hashim (S2043599) \n\n Noel Ng Fong Nian (S2142165) \n\n Rose Tiong (S2123103) \n\n Wong Ann Li (S2148268)"
 
